# agentic-orchiestrator

./: .env.example  README.md  architecture.md  delorenj-mcp-server-trello-1.7.1.tgz  docker-compose.langfuse.yml  pyproject.toml
agentic_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: README.md  document_workflow.yaml  orchestrator.yaml
configs/agents/: document_agent.yaml  math_agent.yaml  transcript_analyst.yaml  trello_update_agent.yaml
configs/mcps/: trello.yaml
configs/subagents/: action_point_generator.yaml  agile_mapper.yaml  calculator_subagent.yaml  conclusions_analyst.yaml  facts_extractor.yaml  facts_filterer.yaml  grounding_auditor.yaml  markdown_extractor.yaml  trello_intake_parser.yaml  trello_publisher.yaml  trello_task_matcher.yaml  trello_task_operator.yaml
configs/tools/: add.yaml  create_output_directory.yaml  log_ticket_payload.yaml  multiply.yaml  read_markdown_structure.yaml  read_transcript.yaml  subtract.yaml  write_markdown_file.yaml
data/: sessions.db
documents/: 01_transcript.md  02_raw_notes.md
documents_backup/: 03_official_documentation.md  04_random_additional_info.md
engine/: main.py  runner.py  server.py
engine/agents/: __init__.py  agent.py  (+7 more)
tests/: test_contracts.py  test_document_workflow.py  test_engine.py  test_enrichment.py  test_events.py  test_generic_tools.py  test_graph.py  test_hitl.py  test_main_tracing.py  test_mcp_runtime.py  test_orchestrator.py  test_pipeline.py  test_projection.py  test_react.py  test_storage.py
transcripts/: nodejs.txt  openai-conference.txt  peterson.txt
(+130 files in other folders)
